web/static/app.css
/* ... */
.btn-rating[value="unset"]:hover,
.btn-rating[value="unset"].active { filter: hue-rotate(240deg); }
.btn-rating:hover,
.btn-rating.active {filter: grayscale(0);opacity: 1;}

.nav-rating-popup {
    position: relative;
    background: var(--header-bg);
}
.nav-rating-popup-opener .btn-rating { display: none; }
.nav-rating-popup-opener .btn-rating.active { display: block; }
.nav-rating-popup:hover .nav-expand,
.nav-rating-popup:focus-within .nav-expand
{
    opacity: 1;
    visibility: visible;
}

.nav-expand.form-local-rating {
    opacity: 0;
    visibility: hidden;
    position: absolute;
    display: grid;
    grid: auto / 1fr 1fr 1fr;
    gap: .3rem;
    padding: .4rem;
    left: 50%;
    transform: translateX(-50%);
    background: var(--header-bg);
}

button[popovertarget="settings-menu-items"] {
    anchor-name: --settings-menu-button;
    background: none;
    border: none;
    padding: 0;
    font: inherit;
    cursor: pointer;
    text-decoration: none;
    color: inherit;
}
#settings-menu-items {
    margin: 0;
    border: 0;
    padding: var(--base-padding);
    background: var(--header-bg);
    inset: auto;
    position: absolute;
    /*position-anchor: --settings-menu-button;*/
    /*position-area: start center;*/
    /*margin-block-start: var(--header-height);*/
    left: anchor(--settings-menu-button center);
    transform: translateX(-50%);
    top: var(--header-height);
}
header:has(#pin-header-checkbox:checked) #settings-menu-items { position: fixed; }
#settings-menu-items:popover-open {
    display: grid;
}

.shortcuts td {padding: .2rem;}
.shortcuts td:first-child {text-align: right;}
.shortcuts kbd {border-radius: 3px;border: 1px solid #bbb;box-shadow: 0 2px 2px rgba(0,0,0,0.2);padding: .1rem .2rem;margin:-.1rem 0;min-width: 1.3rem;display: inline-block;text-align: center;font-family: sans-serif;}
.shortcuts kbd.alpha {font-family: monospace;}

.grid-stack { display: grid; grid-template-areas: "stack"; grid-template-columns: 1fr; grid-template-rows: 1fr; }
.grid-stack > * {grid-area: stack;}

.video-container { display: flex; justify-content: center; }

/* Video thumbnail indicator */
.thumb .video-container {position: relative;}
.thumb .video-container::before,
.thumb .video-container::after {content: '';position: absolute;top: 50%;left: 50%;transform: translate(-50%, -50%);transition: opacity 0.3s ease;}
/* Play button circle */
.thumb .video-container::before {width: 2rem;height: 2rem;background-color: rgba(0, 0, 0, 0.8);border-radius: 100%;opacity: 0.7;}
/* Play button triangle */
.thumb .video-container::after {width: 0;height: 0;border-style: solid;border-width: 0.5rem 0 0.5rem 0.9rem;border-color: transparent transparent transparent #ccc;margin-left: 0.1rem;}

